src/test/ui/const-generics/wf-misc.min.stderr
error: generic parameters must not be used inside const evaluations
  --> $DIR/wf-misc.rs:9:17
   |
LL |     let _: [u8; N + 1];
   |                 ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments `N`

error: generic parameters must not be used inside const evaluations
  --> $DIR/wf-misc.rs:17:21
   |
LL |     let _: Const::<{N + 1}>;
   |                     ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments `N`

error: aborting due to 2 previous errors

